# rust-projects

Development/cpc-library-v2/desktop-library/: Cargo.toml
Development/cpc-library-v2/desktop-library/src-tauri/: Cargo.toml  tauri.conf.json
Development/cpc-library-v2/web-library/: Cargo.toml  README.md
Development/cpc-library-v2/web-library/src/: app.rs  main.rs
Learnings/Rust-lang/actix-api/: Cargo.toml
Learnings/Rust-lang/server-backend/: Cargo.toml
Learnings/Rust-lang/server-backend/src/: error.rs  main.rs  model.rs
Learnings/Rust-lang/server-backend/src/queries/: query_user.rs
Learnings/Rust-lang/server-backend/src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_ticket.rs
Learnings/Rust-lang/server-backend/tests/: quick_dev.rs
Testings/food-crud/: Cargo.toml
