[package]
name = "server-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0", features = ["runtime-tokio", "tls-rustls", "mysql", "time", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] } 
tower-cookies = "0.10"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
